bpo-34603, ctypes/libffi_msvc: Fix returning structs from functions (GH-9258)